// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button 1`] = `
<Styled(div) as="button"
             variant="primary"
             __themekey="buttons"
             __css="[object Object]"
>
  Hello World!
</Styled(div)>
`;

exports[`Storyshots Button Danger Button 1`] = `
<Styled(div) as="button"
             variant="danger"
             __themekey="buttons"
             __css="[object Object]"
>
  Danger!
</Styled(div)>
`;

exports[`Storyshots Button Disabled Button 1`] = `
<Styled(div) as="button"
             variant="primary"
             disabled
             __themekey="buttons"
             __css="[object Object]"
>
  Disabled
</Styled(div)>
`;

exports[`Storyshots Navbar Navbar 1`] = `
<EmotionCssPropInternal as="nav">
  <NavElement as="a"
              href="#"
  >
    Nav1
  </NavElement>
  <NavElement as="a"
              href="#"
  >
    Nav2
  </NavElement>
</EmotionCssPropInternal>
`;

exports[`Storyshots Navbar Selected Nav Element 1`] = `
<EmotionCssPropInternal as="nav">
  <NavElement active
              as="a"
              href="#"
  >
    Nav1
  </NavElement>
  <NavElement as="a"
              href="#"
  >
    Nav2
  </NavElement>
</EmotionCssPropInternal>
`;

exports[`Storyshots TextInput Controlled Input 1`] = `
<TextInput label="Label"
           value
           error
           type="text"
>
</TextInput>
<ForwardRef() pt="3">
  You typed:
</ForwardRef()>
`;

exports[`Storyshots TextInput Disabled Input 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal type="text"
                            value
                            disabled
    >
    </EmotionCssPropInternal>
    <EmotionCssPropInternal>
      <EmotionCssPropInternal as="span">
        Label
      </EmotionCssPropInternal>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Input 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal type="text">
    </EmotionCssPropInternal>
    <EmotionCssPropInternal>
      <EmotionCssPropInternal as="span">
        Label
      </EmotionCssPropInternal>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Input Showing Native Validation Error 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal type="email"
                            value="notanemail"
    >
    </EmotionCssPropInternal>
    <EmotionCssPropInternal>
      <EmotionCssPropInternal as="span">
        Label
      </EmotionCssPropInternal>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Input With Error 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal type="text">
    </EmotionCssPropInternal>
    <EmotionCssPropInternal>
      <EmotionCssPropInternal as="span">
        Label
      </EmotionCssPropInternal>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Input With Prop Passthrough 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal autofocus
                            type="text"
    >
    </EmotionCssPropInternal>
    <EmotionCssPropInternal>
      <EmotionCssPropInternal as="span">
        Label
      </EmotionCssPropInternal>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Input With Ref 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal type="email">
    </EmotionCssPropInternal>
    <EmotionCssPropInternal>
      <EmotionCssPropInternal as="span">
        Email
      </EmotionCssPropInternal>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Input Without Label 1`] = `
<h>
  <EmotionCssPropInternal>
    <EmotionCssPropInternal type="text">
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
</h>
`;

exports[`Storyshots TextInput Inputs Stacked No Padding 1`] = `
<TextInput label="Label 1">
</TextInput>
<TextInput label="Label 2">
</TextInput>
`;
